tests/samples/negative/generics/float_ord_rejected.ax
module float_ord_rejected;

fn less_than<T>(left: T, right: T) -> i32 where T: Ord {
    if left < right {
        return 1;
    }
    return 0;
}

fn main() -> i32 {
    return less_than(((1) as f64), ((2) as f64));
}
